--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="row align-items-center justify-content-center text-center" style="min-height: 100vh;">
                 <div class="col-lg-10">
                     <h1 class="display-2 fw-bold text-white mb-4">
-                        Transform Your Concrete with Professional Coatings
+                        Restore And Protect Your Concrete With Professional Coatings
                     </h1>
                     <p class="lead text-white mb-5 fs-4">
                         Looking to enhance the beauty of your driveway, patio, or concrete flooring? Liberty Concrete Coatings has over 20 years of experience transforming spaces.
